AdHOCInvoiceApp/AdHOCInvoicingApp/ClientApp/src/views/App.css
@import '../../node_modules/@syncfusion/ej2-base/styles/tailwind.css';
@import '../../node_modules/@syncfusion/ej2-buttons/styles/tailwind.css';
@import '../../node_modules/@syncfusion/ej2-dropdowns/styles/tailwind.css';
@import '../../node_modules/@syncfusion/ej2-inputs/styles/tailwind.css';
@import '../../node_modules/@syncfusion/ej2-navigations/styles/tailwind.css';
@import '../../node_modules/@syncfusion/ej2-popups/styles/tailwind.css';
@import '../../node_modules/@syncfusion/ej2-splitbuttons/styles/tailwind.css';
@import "../../node_modules/@syncfusion/ej2-pdfviewer/styles/tailwind.css";
*:disabled {
    cursor: not-allowed;
    pointer-events: all !important;
}

#loading-screen {
    height: 80vh;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.loading-branches>img {
    width: 8rem;
    position: relative;
    margin-bottom: 3rem;
    animation: logo 1s infinite;
}

.loading-branches {
    width: 40%;
    min-width: 200px;
}

.d-flex.justify-content-between {
    margin-bottom: 80px;
}

@keyframes logo {
    0% {
        transform: scale(1);
        top: -2rem;
    }
    50% {
        transform: scale(1.1);
        top: 0;
    }
    100% {
        transform: scale(1);
        top: -2rem;
    }
}

#report-modal .react-datepicker-wrapper {
    width: 452px;
}

th {
    background: white;
    position: sticky;
    top: 0;
    /* Don't forget this, required for the stickiness */
    box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4);
    z-index: 100;
}

.table-record:hover {
    box-shadow: 0 4px 8px 0 #cecece;
    /* transform: scale(1.05); */
    cursor: pointer;
    background-color: white !important;
}

.dropzone {
    border-style: dashed;
    height: 100px;
    margin-bottom: 10px;
}

.reportviewer-container_licensing_content,
#reportviewer-container_licensing_msgContainer {
    display: none !important;
}

.active-row {
    background-color: red !important;
}

select-searchbody {
    background: whitesmoke;
}


/**
 * Main wrapper
 */

.select-search {
    width: inherit;
    position: relative;
    font-family: "Nunito Sans", sans-serif;
    box-sizing: border-box;
}

.select-search *,
.select-search *::after,
.select-search *::before {
    box-sizing: inherit;
}


/**
* Value wrapper
*/

.select-search__value {
    position: relative;
    z-index: 1;
}

.select-search__value::after {
    content: "";
    display: inline-block;
    position: absolute;
    top: calc(50% - 9px);
    right: 19px;
    width: 11px;
    height: 11px;
}


/**
* Input
*/

.select-search__input {
    display: block;
    height: 36px;
    width: 100%;
    padding: 0 40px 0 16px;
    background: #fff;
    border: 1px solid transparent;
    box-shadow: 0 0.0625rem 0.125rem rgba(0, 0, 0, 0.15);
    border-radius: 3px;
    outline: none;
    font-family: "Noto Sans", sans-serif;
    font-size: 14px;
    text-align: left;
    text-overflow: ellipsis;
    line-height: 36px;
    -webkit-appearance: none;
}

.select-search__input::-webkit-search-decoration,
.select-search__input::-webkit-search-cancel-button,
.select-search__input::-webkit-search-results-button,
.select-search__input::-webkit-search-results-decoration {
    -webkit-appearance: none;
}

.select-search__input:not([readonly]):focus {
    cursor: initial;
}


/**
* Options wrapper
*/

.select-search__select {
    background: #fff;
    box-shadow: 0 0.0625rem 0.125rem rgba(0, 0, 0, 0.15);
}


/**
* Options
*/

.select-search__options {
    list-style: none;
    padding: 0;
}


/**
* Option row
*/

.select-search__row:not(:first-child) {
    border-top: 1px solid #eee;
}


/**
* Option
*/

.select-search__option,
.select-search__not-found {
    display: block;
    height: 36px;
    width: 100%;
    padding: 0 16px;
    background: #fff;
    border: none;
    outline: none;
    font-family: "Noto Sans", sans-serif;
    font-size: 14px;
    text-align: left;
    cursor: pointer;
}

.select-search--multiple .select-search__option {
    height: 48px;
}

.select-search__option.is-selected {
    background: #2fcc8b;
    color: #fff;
}

.select-search__option.is-highlighted,
.select-search__option:not(.is-selected):hover {
    background: rgba(47, 204, 139, 0.1);
}

.select-search__option.is-highlighted.is-selected,
.select-search__option.is-selected:hover {
    background: #2eb378;
    color: #fff;
}


/**
* Group
*/

.select-search__group-header {
    font-size: 10px;
    text-transform: uppercase;
    background: #eee;
    padding: 8px 16px;
}


/**
* States
*/

.select-search.is-disabled {
    opacity: 0.5;
}

.select-search.is-loading .select-search__value::after {
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='50' height='50' viewBox='0 0 50 50'%3E%3Cpath fill='%232F2D37' d='M25,5A20.14,20.14,0,0,1,45,22.88a2.51,2.51,0,0,0,2.49,2.26h0A2.52,2.52,0,0,0,50,22.33a25.14,25.14,0,0,0-50,0,2.52,2.52,0,0,0,2.5,2.81h0A2.51,2.51,0,0,0,5,22.88,20.14,20.14,0,0,1,25,5Z'%3E%3CanimateTransform attributeName='transform' type='rotate' from='0 25 25' to='360 25 25' dur='0.6s' repeatCount='indefinite'/%3E%3C/path%3E%3C/svg%3E");
    background-size: 11px;
}

.select-search:not(.is-disabled) .select-search__input {
    cursor: pointer;
}


/**
* Modifiers
*/

.select-search--multiple {
    border-radius: 3px;
    overflow: hidden;
}

.select-search:not(.is-loading):not(.select-search--multiple) .select-search__value::after {
    transform: rotate(45deg);
    border-right: 1px solid #000;
    border-bottom: 1px solid #000;
    pointer-events: none;
}

.select-search--multiple .select-search__input {
    cursor: initial;
}

.select-search--multiple .select-search__input {
    border-radius: 3px 3px 0 0;
}

.select-search--multiple:not(.select-search--search) .select-search__input {
    cursor: default;
}

.select-search:not(.select-search--multiple) .select-search__input:hover {
    border-color: #2fcc8b;
}

.select-search:not(.select-search--multiple) .select-search__select {
    position: absolute;
    z-index: 2;
    top: 44px;
    right: 0;
    left: 0;
    border-radius: 3px;
    overflow: auto;
    max-height: 360px;
}

.select-search--multiple .select-search__select {
    position: relative;
    overflow: auto;
    max-height: 260px;
    border-top: 1px solid #eee;
    border-radius: 0 0 3px 3px;
}

.select-search__not-found {
    height: auto;
    padding: 16px;
    text-align: center;
    color: #888;
}

.table-responsive>table {
    overflow-x: initial !important;
}

.table-responsive {
    overflow-x: initial !important;
}


/* .table th, */


/* .table td {
  padding-top: 0px !important;
  padding-bottom: 0px !important;
}

.shadow {
  border-radius: 0px !important;
} */

#index-table {
    table-layout: fixed;
}

#index-table td,
.purchase-table td {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

#index-table td:nth-child(3) {
    width: 100px !important;
}

td.table-action {
    padding: 0 !important;
}

.evat-table-message {}

#action-button {
    color: white;
    background: green;
    /* border: 1px solid; */
    border-radius: 2px;
}

*:disabled {
    opacity: 0.6;
    cursor: not-allowed;
    pointer-events: none;
}

.refund-modal-wrapper {
    min-width: fit-content !important;
}

a {
    color: inherit !important;
}

.sideBar .isActive,
.noti-title a {
    color: #5e72e4 !important;
}

#sidebar-wrapper {
    height: 100%
}

.sidebar li .submenu {
    list-style: none;
    margin: 0;
    padding: 0;
    padding-left: 1rem;
    padding-right: 1rem;
}

#table-info,
#table-loader-wrapper {
    position: absolute;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
    width: fit-content;
}

.text-primary {
    color: inherit !important;
}

.rate-picker-date>.react-datepicker-wrapper {
    width: 100%;
}

